--- a/myStyle.css
+++ b/myStyle.css
@@ -73,12 +73,13 @@ body{
     padding:50px;
    
 }
-.main table{
+table{
+    width: 80%;
+    height: 80%;
+    margin-left: 100px;
+    margin-top: 40px;
     border-collapse: collapse;
     text-align: center;
-    height: 400px;
-    width: 700px;
-    margin-left: 200px;
     font-size: 20px;
     font-family: STKaiti;
     border: 10px solid gray;
